fix local files

--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -115,7 +115,7 @@ bad_post_order: |
   какие есть /guarantees
 recorded: 🗳 
 thank: |
- Спасибо, что опубликовали ваш запрос, надеюсь скоро вам напишет человек и вы благополучно обменяетсь деньгами 
+ Спасибо, что опубликовали ваш запрос, надеюсь скоро вам напишет человек и вы благополучно обменяетесь деньгами 
 not_orders_yet: |
  У вас нету опубликованных запросов.
 
