--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -121,7 +121,7 @@ not_orders_yet: |
 
  Если хотите создать, нажмите кнопку "Отправить деньги" 
 delete_order:
- Удалить звпрос
+ Удалить зaпрос
 my_orders:
  Мои запросы
 post:
