add methods get and send

--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -23,9 +23,17 @@ language: Пожалуйста, выберите язык.
 language_selected: <b>Бот</b> теперь говорит по-русски.
 send: Oтправить деньги
 from: |
- <b>Куда</b> вы хотите отправить деньги?
-to: |
  <b>Откуда</b> вы хотите отправить деньги?
+fromMethod: |
+  Напишите в свободной форме каким методом вы можете <b>отправить</b> деньги.
+
+  Пример: "Переводом на карту" или "Наличными при встрече" 
+to: |
+ <b>Куда</b> вы хотите отправить деньги?
+toMethod: | 
+ Напишите в свободной форме каким методом вы можете <b>получить</b> деньги.
+
+ Пример: "Переводом на карту " или "Наличными при встрече" 
 amount: |
  Введите сумму которую хотите отправить
 cancel_selected: |
@@ -83,18 +91,28 @@ enter_another_way_to_contact:  |
 check_nick: Проверить ник 
 another_way_to_contact: Другой способ связи
 order: |
- Номер запроса: ${data.id}
+ Ваш запрос: 
+
+ Номер: ${data.id}
  Откуда: ${data.from}
+ Метод отправки: ${data.methodFrom}
+
  Куда: ${data.to}
+ Метод получения: ${data.methodTo}
  Сумма: ${data.amount} ${data.currency}
+
  Способ связи: ${data.contact}
 select_order: |
  ${data.current} из ${data.all}:
 
- Номер запроса: ${data.id}
+ Номер: ${data.id}
  Откуда: ${data.from}
+ Метод отправки: ${data.methodFrom}
+
  Куда: ${data.to}
+ Метод получения: ${data.methodTo}
  Сумма: ${data.amount} ${data.currency}
+
  Способ связи: ${data.contact}
 no_orders: | 
  Похоже подходящих для вас запросов не найдено.
