--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -24,8 +24,16 @@ language_selected: <b>This bot</b> now speaks English.
 send: Send money
 from: |
  <b>From</b> which country do you want to send money?
+fromMethod: |
+  Write in free form what method you can <b>send</b> money to.
+
+  Example: "By transfer to card" or "Cash upon meeting"  
 to: |
  <b>To</b> which country do you want to send money?
+toMethod: | 
+ Write in free form what method you can <b>get</b> money from.
+
+ Example: "By transfer to card" or "Cash upon meeting"
 amount: |
  Enter the amount you want to send
 cancel_selected: |
@@ -84,19 +92,28 @@ enter_another_way_to_contact:  |
  Example "phone number: +375 29 123 456 7 or instagram: @ zuck"
 
 order: |
- Request number: ${data.id}
- From: ${data.from}
- To: ${data.to}
- Sum: ${data.amount} ${data.currency}
- Communication method: ${data.contact}
+ Your order:
 
+ Number: ${data.id}
+ From: ${data.from}
+ Sending method: ${data.methodFrom}
+
+ To: ${data.to}
+ Receipt method: ${data.methodTo}
+ Sum: ${data.amount} ${data.currency}
+
+ Communication method: ${data.contact}
 select_order: |
  ${data.current} out of ${data.all}:
 
- Request number: ${data.id}
+ Number: ${data.id}
  From: ${data.from}
+ Sending method: ${data.methodFrom}
+
  To: ${data.to}
+ Receipt method: ${data.methodTo}
  Sum: ${data.amount} ${data.currency}
+
  Communication method: ${data.contact} 
 no_orders: | 
  Looks like no matching queries were found for you.
