--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -27,13 +27,13 @@ from: |
 fromMethod: |
   Напишите в свободной форме каким методом вы можете <b>отправить</b> деньги.
 
-  Пример: "Переводом на карту" или "Наличными при встрече" 
+  Пример: "Переводом на карту"
 to: |
  <b>Куда</b> вы хотите отправить деньги?
 toMethod: | 
  Напишите в свободной форме каким методом вы можете <b>получить</b> деньги.
 
- Пример: "Переводом на карту " или "Наличными при встрече" 
+ Пример: "Наличными при встрече" 
 amount: |
  Введите сумму которую хотите отправить
 cancel_selected: |
