--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -43,6 +43,9 @@ currency: |
  Выберите валюту  
 by: Беларусь 
 pl: Польша
+ru: Россия
+ua: Украина
+eu: Европа
 bad_country: |
  Я вас не понял
 
@@ -57,8 +60,6 @@ eur: EUR
 usd: USD
 byn: BYN
 pln: PLN
-blnt: BLNT
-g: G
 bad_currency: |
  Я вас не понял
 
