--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -73,7 +73,7 @@ bad_currency: |
 bad_amount: |
  Я вас не понял
 
- Введите сумму которую  хотите отправить, она должна быть больше 1 и меньше 10 000.
+ Введите сумму которую  хотите отправить, она должна быть больше 1 и меньше 10 000 000.
 
  Если хотите отменить отправку, то нажмите кнопку "Отмена" для возврата в начало 
  или же выберите одну из команд:
@@ -145,6 +145,8 @@ delete_order:
  Удалить зaпрос
 my_orders:
  Мои запросы
+other_orders:
+ Запросы других 
 post:
  Разместить мой запрос
 order_deleted: Ваш запрос успешно удален
