--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -1,5 +1,30 @@
 name: Русский
 start: |
+ <b>Тиндер</b> для перервода денег.
+
+ С помощью этого раздела бота вы можете найти человека которому, как и вам, надо отравить деньги но в обратную сторону. 
+
+ <b>Перевод</b> денег сразу 
+ 
+ Здесь вы можете отправить деньги в любую страну обычным переводом на карту.
+
+ Для этого мы находим самый дешевый путь покупки/продажи криптовалюты через p2p площадки.
+
+
+ сменить /language
+start_transfer: |
+ Данная функция доступна ограниченному количеству юзеров. 
+ Добавьте себя в лист ожидания и вы получите уведомления как только наступит ваша очередь. Для этого нажмите кнопку добавить. 
+ 
+ Если вам нужен перевод денег срочно, напишите @ma66is : "Привет, надо перевести деньги из страны X в страну Y" и мы поможем вам индивидуально. 
+
+bad_start_transfer: | 
+  Я вас не понял
+
+  Нажмите кнопку "Добавить", если хотите записать себя в лист ожидания или "Отмена", если хотите вернуться в главное меню или же можете выберите одну из команд:
+
+  сменить /language
+start_tinder: |
  Тиндер для перервода денег.
 
  С помощью этого бота вы можете найти человека которому, как и вам, надо отравить деньги но в обратную сторону. 
@@ -11,6 +36,12 @@ start: |
  сменить /language
  какие есть /guarantees
 bad_start: | 
+  Я вас не понял
+
+  Нажмите кнопку "Перевод", если хотите отправить деньги сразу или "Тиндер", если хотите найти человека для перевода денег или же можете выберите одну из команд:
+
+  сменить /language
+bad_start_tinder: | 
   Я вас не понял
 
   Нажмите кнопку "Отправить деньги", если хотите отправить деньги или "Мои запросы", если хотите посмотреть свои запросы или же можете выберите одну из команд:
@@ -150,3 +181,7 @@ other_orders:
 post:
  Разместить мой запрос
 order_deleted: Ваш запрос успешно удален
+tinder: Тиндер
+transfer: Перевод 
+add: Добавить
+added: Вы успешно добавлены в лист ожидания, спасибо, скоро мы дадим вам доступ
