--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -12,11 +12,29 @@ start: |
 
 
  сменить /language
+send_flag_from: |
+ Откройте клавиатуру с эмодзи на вашем устройстве, в поиске введите страну из которой хотите отправить деньги и отправьте эмоджи флага этой страны.
+
+ Если у вас страна отправки ${data.country}, то отрпавьте ${data.flag} 
+send_flag_to: |
+ Куда вы хотите отправить деньги?
+
+ Если у вас страна получения ${data.country}, то отрпавьте ${data.flag}  
 start_transfer: |
+ <b>Перевод</b> денег сразу 
+ 
+ Здесь вы можете отправить деньги в любую страну обычным переводом на карту.
+
+ Для этого мы находим самый дешевый путь покупки/продажи криптовалюты через p2p площадки.
+not_yet_on_waiting_list: |
  Данная функция доступна ограниченному количеству юзеров. 
  Добавьте себя в лист ожидания и вы получите уведомления как только наступит ваша очередь. Для этого нажмите кнопку добавить. 
  
- Если вам нужен перевод денег срочно, напишите @ma66is : "Привет, надо перевести деньги из страны X в страну Y" и мы поможем вам индивидуально. 
+ Если вам нужен перевод денег срочно, напишите @ma66is : "Привет, надо перевести деньги из страны X в страну Y" и мы поможем вам индивидуально.
+already_on_waiting_list: |
+ Вы уже в листе ожидания.
+ 
+ Если вам нужен перевод денег срочно, напишите @ma66is : "Привет, надо перевести деньги из страны X в страну Y" и мы поможем вам индивидуально.
 
 bad_start_transfer: | 
   Я вас не понял
@@ -44,15 +62,14 @@ bad_start: |
 bad_start_tinder: | 
   Я вас не понял
 
-  Нажмите кнопку "Отправить деньги", если хотите отправить деньги или "Мои запросы", если хотите посмотреть свои запросы или же можете выберите одну из команд:
+  Нажмите кнопку "Запросы других", если хотите выбрать подходящий вам запрос на перевод или "Мои запросы", если хотите посмотреть свои запросы или же можете выберите одну из команд:
 
-  сменить /language
-  какие есть /guarantees   
+  сменить /language 
 guarantees: |
   Самый надежный способ быть увереным в транзакции - это личная встреча. Договоритесь о том где вы встретитесь с его получателем, а он с вашим в одно время и находясь на связи обменяйтесь деньгами.    
 language: Пожалуйста, выберите язык.
 language_selected: <b>Бот</b> теперь говорит по-русски.
-send: Oтправить деньги
+send_money: Oтправить деньги
 from: |
  <b>Откуда</b> вы хотите отправить деньги?
 fromMethod: |
@@ -67,6 +84,8 @@ toMethod: |
  Пример: "Наличными при встрече" 
 amount: |
  Введите сумму которую хотите отправить
+amount_transfer: |
+ Введите сумму в нациалнальной валюте (${data.currency}) которую хотите перевести 
 cancel_selected: |
  Вы вернулись в главное меню
 cancel: Отмена
@@ -185,3 +204,44 @@ tinder: Тиндер
 transfer: Перевод 
 add: Добавить
 added: Вы успешно добавлены в лист ожидания, спасибо, скоро мы дадим вам доступ
+setup_filters: Установите фильтры для подбора подходящих запросов
+payment_system_from: |
+ Выберите каким способом вы можете отправить деньги
+payment_system_to: |
+ Выберите каким способом вы можете получить деньги
+finish: |
+ Нажмите кнопку "Финишь", когда выбирете все подходящие вам способы.
+finish_btn: Финишь 
+offer_for_trnafer: |
+ ${data.index} из ${data.length} способов
+
+ Заходите на ${data.platformForBuy}
+ <a href="${data.linkFrom}">Покупаете</a> 
+ Ник продовца: ${data.nameSeller}
+ Сеть: ${data.protocol}
+ Курс за 1 USDT: ${data.exchangeRateBuy} ${data.currencyBuy}
+
+ Переводите на ${data.platformForSale}
+ Комиссия за перевод между продовцом и покупаетелем: ${data.fees} USDT
+
+ <a href="${data.linkTo}">Продаете</a> 
+ Ник покупателя: ${data.nameBuyer}
+ Сеть: ${data.protocol}
+ Курс за 1 USDT: ${data.exchangeRateSell} ${data.currencySell}
+
+ Финальная сумма: ${data.sum}
+update_offers: Обновить предложения 
+bad_req: | 
+  Я вас не понял
+one_click_transfer: |
+ Если хотите перевести деньги одним кликом через бота - выбирите подходящую пару предоложений и нажмите кнопку 'Перевести в одинк клик'
+    
+
+
+
+
+
+
+
+
+    
