--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -90,7 +90,7 @@ cancel_selected: |
  Вы вернулись в главное меню
 cancel: Отмена
 currency: |
- Выберите валюту  
+ Выберите валюту или введите название в свободной форме 
 by: Беларусь 
 pl: Польша
 ru: Россия
@@ -190,7 +190,7 @@ thank: |
 not_orders_yet: |
  У вас нету опубликованных запросов.
 
- Если хотите создать, нажмите кнопку "Отправить деньги" 
+ Если хотите создать, нажмите кнопку "Запросы других" 
 delete_order:
  Удалить зaпрос
 my_orders:
@@ -213,7 +213,7 @@ finish: |
  Нажмите кнопку "Финишь", когда выбирете все подходящие вам способы.
 finish_btn: Финишь 
 offer_for_trnafer: |
- ${data.index} из ${data.length} способов
+ ${data.index} из ${data.length} способов отправить ${data.amount} ${data.currencyBuy}
 
  Заходите на ${data.platformForBuy}
  <a href="${data.linkFrom}">Покупаете</a> 
@@ -235,7 +235,24 @@ bad_req: |
   Я вас не понял
 one_click_transfer: |
  Если хотите перевести деньги одним кликом через бота - выбирите подходящую пару предоложений и нажмите кнопку 'Перевести в одинк клик'
-    
+make_transfer_btn: |
+   Сделать перевод
+make_transfer: |
+  На этой стадии бот работает в ручном режиме.
+
+  В ближайшее время с вами свяжется разработчик бота @ma66is, что бы сделать перевод по выбраному вами пути за вас!
+
+  Приносим извинения за неудобсвта!  
+make_transfer_no_username: |
+  На этой стадии бот работает в ручном режиме.
+
+  У вас в профиле не указан юзернейм.
+  Отправьте любой стикер разработчику этого бота @ma66is, что бы он появился у вас в списке чатов и перешлите ему сообщение, которое вы выбрали для перевода
+
+  Далее он сделает все за вас!
+
+  Приносим извинения за неудобсвта!  
+
 
 
 
