--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -26,6 +26,8 @@ start_transfer: |
  Здесь вы можете отправить деньги в любую страну обычным переводом на карту.
 
  Для этого мы находим самый дешевый путь покупки/продажи криптовалюты через p2p площадки.
+
+ сменить /language
 not_yet_on_waiting_list: |
  Данная функция доступна ограниченному количеству юзеров. 
  Добавьте себя в лист ожидания и вы получите уведомления как только наступит ваша очередь. Для этого нажмите кнопку добавить. 
