--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -15,7 +15,7 @@ start: |
 send_flag_from: |
  Откройте клавиатуру с эмодзи на вашем устройстве, в поиске введите страну из которой хотите отправить деньги и отправьте эмоджи флага этой страны.
 
- Если у вас страна отправки ${data.country}, то отрпавьте ${data.flag} 
+ Если у вас страна отправки ${data.country}, то отправьте ${data.flag} 
 send_flag_to: |
  Куда вы хотите отправить деньги?
 
@@ -212,8 +212,8 @@ payment_system_from: |
 payment_system_to: |
  Выберите каким способом вы можете получить деньги
 finish: |
- Нажмите кнопку "Финишь", когда выбирете все подходящие вам способы.
-finish_btn: Финишь 
+ Нажмите кнопку "Финиш", когда выберите все подходящие вам способы.
+finish_btn: Финиш 
 offer_for_trnafer: |
  ${data.index} из ${data.length} способов отправить ${data.amount} ${data.currencyBuy}
 
@@ -236,7 +236,7 @@ update_offers: Обновить предложения
 bad_req: | 
   Я вас не понял
 one_click_transfer: |
- Если хотите перевести деньги одним кликом через бота - выбирите подходящую пару предоложений и нажмите кнопку 'Перевести в одинк клик'
+ Если хотите перевести деньги одним кликом через бота - выберите подходящую пару предоложений и нажмите кнопку 'Перевести в одинк клик'
 make_transfer_btn: |
    Сделать перевод
 make_transfer: |
