--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -1,8 +1,8 @@
 name: Русский
 start: |
- <b>Тиндер</b> для перервода денег.
+ <b>Тиндер</b> для перевода денег.
 
- С помощью этого раздела бота вы можете найти человека которому, как и вам, надо отравить деньги но в обратную сторону. 
+ С помощью этого раздела бота вы можете найти человека которому, как и вам, надо отправить деньги но в обратную сторону. 
 
  <b>Перевод</b> денег сразу 
  
@@ -19,7 +19,7 @@ send_flag_from: |
 send_flag_to: |
  Куда вы хотите отправить деньги?
 
- Если у вас страна получения ${data.country}, то отрпавьте ${data.flag}  
+ Если у вас страна получения ${data.country}, то отправьте ${data.flag}  
 start_transfer: |
  <b>Перевод</b> денег сразу 
  
@@ -47,10 +47,10 @@ bad_start_transfer: |
 start_tinder: |
  Тиндер для перервода денег.
 
- С помощью этого бота вы можете найти человека которому, как и вам, надо отравить деньги но в обратную сторону. 
+ С помощью этого бота вы можете найти человека которому, как и вам, надо отправить деньги но в обратную сторону. 
 
  Пример: 
- Вам надо отравить 100$ из Беларуси в Польшу, вы сообщаете об этом боту и он выдает вам список переводов из Польши в Беларусь с суммой около или равной 100$. 
+ Вам надо отправить 100$ из Беларуси в Польшу, вы сообщаете об этом боту и он выдает вам список переводов из Польши в Беларусь с суммой около или равной 100$. 
  Далее вы договариваетесь о способе отправки денег его получаетелю в Беларуси и способе отправки денег вашему получателю в Польше.  
 
  сменить /language
@@ -171,10 +171,10 @@ no_orders: |
  Похоже подходящих для вас запросов не найдено.
  Давайте разместим ваш и следующий человек которому надо будет перевести деньги свяжется с вами. 
 
- Нажмите кнопку "Pазместить мой запрос", если хотите опубликовать ваш запрос 
+ Нажмите кнопку "Разместить мой запрос", если хотите опубликовать ваш запрос 
  или нажмите кнопку "Oтмена", если хотит прекратить публикацию.   
 if_post_order: |
- Если вы не нашли подходящего запроса нажмите кнопку "Разместить мой запрос"
+  Если вы не нашли подходящего запроса нажмите кнопку "Разместить мой запрос"
  и следующий человек которому надо будет перевести деньги свяжется с вами.   
 bad_post_order: | 
   Я вас не понял
@@ -219,12 +219,12 @@ offer_for_trnafer: |
 
  Заходите на ${data.platformForBuy}
  <a href="${data.linkFrom}">Покупаете</a> 
- Ник продовца: ${data.nameSeller}
+ Ник продавца: ${data.nameSeller}
  Сеть: ${data.protocol}
  Курс за 1 USDT: ${data.exchangeRateBuy} ${data.currencyBuy}
 
  Переводите на ${data.platformForSale}
- Комиссия за перевод между продовцом и покупаетелем: ${data.fees} USDT
+ Комиссия за перевод между продовцом и покупателем: ${data.fees} USDT
 
  <a href="${data.linkTo}">Продаете</a> 
  Ник покупателя: ${data.nameBuyer}
@@ -244,7 +244,7 @@ make_transfer: |
 
   В ближайшее время с вами свяжется разработчик бота @ma66is, что бы сделать перевод по выбраному вами пути за вас!
 
-  Приносим извинения за неудобсвта!  
+  Приносим извинения за неудобства!  
 make_transfer_no_username: |
   На этой стадии бот работает в ручном режиме.
 
@@ -253,7 +253,7 @@ make_transfer_no_username: |
 
   Далее он сделает все за вас!
 
-  Приносим извинения за неудобсвта!  
+  Приносим извинения за неудобства!  
 
 
 
